# AVR

./: board_sch.sch
avr_cmake/: CMakeLists.txt  tx.cpp
uart/: CMakeLists.txt  tx.cpp
